MDEXP-621 Fixed duplicate deleted